refactor: Update deprecated URL - #5